# pycdt-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  tests.yml
examples/: basic_triangulation.py
python/: Cargo.toml  README.md  pyproject.toml
python/examples/: circle.py  constrained_triangulation.py  cyl_face.py  plane_face.py  plane_face_2.py  points_on_edge.py  toroidal_face.py  utils.py
python/src/: lib.rs
src/: build.rs  constrained.rs  geometry.rs  lib.rs  python.rs  topology.rs  triangulation.rs  types.rs
tests/: proptest_triangulation.proptest-regressions  proptest_triangulation.rs  test_cdt.rs  test_constrained.rs  test_finalization.rs  test_query.rs  test_swap_diagonal.rs
