[package]
name = "pycdt-rs"
version = "0.1.0"

[lib]
name = "pycdt_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
robust = "1"
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"
