[package]
name = "pycdt-rs"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["python"]

[lib]
name = "pycdt_rs"
crate-type = ["rlib"]

[dependencies]
robust = "1"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"
